test/sema/generics/generic_argument_cannot_be_inferred.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> { x: number }

fn foo<T>(): void {}

fn bar<T, U>(x: T): void {}

fn main(): void {
  // CHECK: [[# @LINE + 1 ]]:3: error: explicit type annotations are needed to infer the type of 'S'
  S{ x: 1 };
  
  // CHECK: [[# @LINE + 1 ]]:3: error: explicit type annotations are needed to infer the type of 'foo'
  foo();
  
  // CHECK: [[# @LINE + 1 ]]:3: error: explicit type annotations are needed to infer the type of 'bar'
  bar(1);
}

// CHECK-NOT: {{.*error.*}}
